[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "icebot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
flask = "^1.1"
python = "^3.8"
python-dotenv = "^0.13.0"
"discord.py" = "^1.3.4"
[tool.poetry.dev-dependencies]
